# image_processor

./: CMakeLists.txt  README.md  image_processor.cpp  гшг
include/: pipeline.h
include/data/: color.h  image.h  matrix.h
include/filters/: crop.h  edge_detection.h  filter.h  gaussian_blur.h  grayscale.h  matrix_filter.h  negative.h  point_filter.h  sharpening.h
include/io/: bmp.h  image_format.h
include/utils/: args_processor.h
src/: pipeline.cpp
src/data/: color.cpp  image.cpp  matrix.cpp
src/filters/: crop.cpp  edge_detection.cpp  gaussian_blur.cpp  grayscale.cpp  matrix_filter.cpp  negative.cpp  point_filter.cpp  sharpening.cpp
src/io/: bmp.cpp
src/utils/: args_processor.cpp
